# WheelEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Editor/: CMakeLists.txt
Editor/Source/: EditorCamera.cpp  EditorCamera.h  EditorLayer.cpp  EditorLayer.h  main.cpp
Editor/Source/Panels/: ResourceBrowser.cpp  ResourceBrowser.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  SceneInspectorPanel.cpp  SceneInspectorPanel.h
Editor/assets/shaders/: default2D.glsl  mesh_shader.glsl  model_shader.glsl  texture.glsl
Engine/: CMakeLists.txt
Engine/Source/: CMakeLists.txt
Engine/Source/Runtime/: CMakeLists.txt  Wheel.h
Engine/Source/Runtime/Core/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseCodes.h  Window.h
Engine/Source/Runtime/Event/: Event.h
Engine/Source/Runtime/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Engine/Source/Runtime/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
Engine/Source/Runtime/Platform/Mac/: MacInput.cpp  MacWindow.cpp  MacWindow.h
Engine/Source/Runtime/Platform/OpenGL/: ImGuiOpenGLRenderer.cpp  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture2D.cpp  OpenGLTexture2D.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Engine/Source/Runtime/Renderer/: Buffer.cpp  Buffer.h  Camera.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  OrthographicCamera.cpp  OrthographicCamera.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Engine/Source/Runtime/Scene/: Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneSerializer.cpp  SceneSerializer.h  ScriptableEntity.h
Engine/src/: Test.cpp  Test.h
Game/: CMakeLists.txt
Game/Source/: Sandbox2DLayer.cpp  Sandbox2DLayer.h  main.cpp
Game/src/: main.cpp
